syntax = "proto3";

import "packages/hal/proto/device.proto";
import "packages/core/proto/timestamp.proto";

package hal;

message PointAndGoSample {
    /// Where did this stimulus to the system originate? This should refer to a
    /// specific *teleoperator*
    ///
    /// Temporarily, this will always be populated as:
    /// { name: "Teleoperator", serialNumber: 1 }
    ///
    /// until it becomes clear how to "properly" deal with the serial number.
    Device originatorDevice = 1;

    /// Teleoperator client's best guess as to when this stimulus was generated.
    /// This can be used to order messages from a single teleoperator during a
    /// single session but that is about all.
    core.SystemTimestamp originatorSystemTimestamp = 2;

    /// Device which generated the original stimulus to which this P&G sample is
    /// a response.
    Device sourceDevice = 3;

    /// System timestamp of the original stimulus to which this P&G sample is a
    /// a response.
    core.SystemTimestamp sourceSystemTimestamp = 4;

    /// As measured from the top left, x increasing left to right, y increasing
    /// top to bottom, the relative location of the operator's click in the X
    /// direction. Always in the range [0, 1]
    float clickXFraction = 5;

    /// As measured from the top left, x increasing left to right, y increasing
    /// top to bottom, the relative location of the operator's click in the Y
    /// direction. Always in the range [0, 1]
    float clickYFaction = 6;
}
